Added Identity to project.

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CST465Lab8ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CST465Lab8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
