--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CST465Lab8ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CST465Lab8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CST465Lab8ContextConnection": "Server=cst465.database.windows.net;Database=jacob.locke;User ID=jacob.locke;Password=CST465 0669!; Connection Timeout=300; Trusted_Connection=False; Encrypt=True;"
   }
 }
+
+
+
+
