--- a/appsettings.json
+++ b/appsettings.json
@@ -4,10 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CST465Lab8ContextConnection": "Server=cst465.database.windows.net;Database=jacob.locke;User ID=jacob.locke;Password=CST465 0669!; Connection Timeout=300; Trusted_Connection=False; Encrypt=True;"
-  }
+  "AllowedHosts": "*"
 }
 
 
